local-services/homeassistant/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
subsets:
- addresses:
  - ip: 192.168.1.23
  ports:
  - port: 8123
    protocol: TCP
