local-services/homeassistant/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
