local-services/homeassistant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    name: homeassistant-ingress
  name: homeassistant-ingress
spec:
  ingressClassName: public
  rules:
  - host: hass.kristoffer.codes
    http:
      paths:
      - backend:
          service:
            name: homeassistant
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hass.kristoffer.codes
    secretName: homeassistant-tls-cert
